aux_source_directory(. RESEARCH_DIR_SRCS)
find_package(ZLIB)
if(ZLIB_FOUND)
	message(${ZLIB_VERSION_STRING})
	file(GLOB PCLLIBS "${PCL_LIBRARY_DIRS}/libpcl_*.so")
	message(${PCLLIBS})
	#include(${ZLIB_INCLUDE_DIR})
endif()

include_directories(../../library)
include_directories(../LidarPotreeCvt/include)
include_directories(../LidarPotreeCvt/lib/rapidjson/include)
include_directories(../LidarPotreeCvt/lib/arguments)

add_library(libresearch ${RESEARCH_DIR_SRCS})
target_link_libraries(libresearch libalgorithm libutility libpotreecvt libbase)
if(ZLIB_FOUND)
	target_link_libraries(libresearch ${ZLIB_LIBRARIES})
endif()
if(PCL_FOUND)
	target_link_libraries(libresearch ${PCLLIBS})
endif()
